# openpose

./: .gitignore  CMakeLists.txt  COMMANDS FOR OPENPOSE-STAF  COMMANDS FOR OPENPOSE-STAF.rtf  README.md  Trying to get STAF working.rtf  openPose-staf_setup.rtf  openpose  openpose.txt
cmake/: Cuda.cmake
cmake/Modules/: FindCuDNN.cmake
doc/: installation.md  installation_cmake.md
doc/modules/: python_module.md
eval/: eval.sh  eval_posetrack.py  eval_posetrack.sh  eval_posetrack_range.py
examples/: CMakeLists.txt
examples/openpose/: CMakeLists.txt  openpose.cpp
examples/tests/: CMakeLists.txt  poseFromHMTest.py  pose_accuracy_coco_val.sh  pythonTest.py
examples/tutorial_add_module/: CMakeLists.txt
examples/tutorial_api_cpp/: CMakeLists.txt  x_tracking.cpp  x_util.h
examples/tutorial_developer/: python_1_pose_from_heatmaps.py
examples/tutorial_pose/: 3_extract_video.cpp  4_mosse_dev.cpp  CMakeLists.txt
examples/tutorial_python/: 1_extract_pose.py  2_pose_from_heatmaps.py
examples/tutorial_thread/: CMakeLists.txt
examples/tutorial_wrapper/: 7_tracking.cpp  CMakeLists.txt
include/openpose/: flags.hpp
include/openpose/core/: array.hpp  arrayCpuGpu.hpp
include/openpose/gpu/: cl2.hpp  opencl.hpp
include/openpose/net/: bodyPartConnectorBase.hpp  net.hpp  netCaffe.hpp
models/: getModels.bat
python/: CMakeLists.txt
python/openpose/: 2_pose_from_heatmaps.py  CMakeLists.txt  _openpose.cpp  _openpose.cpp.orig  openpose.py
src/openpose/: CMakeLists.txt
tracker/: pose_deploy_1.prototxt  pose_deploy_2.prototxt  vgg.prototxt
(+72 files in other folders)
